--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -14,6 +14,7 @@ a:visited {
 .Footer-BG {
   width: 100%;
   height: 25vh;
+  min-height: 250px;
   object-fit: contain;
   background-color: #000000;
       position: relative;
